# opensearch-mcp-server

./: README.md  pyproject.toml
src/opensearch_mcp_server/: __init__.py  __main__.py  client.py  server.py
src/opensearch_mcp_server/tools/: cluster.py  document.py  index.py  search.py
