[project]
name = "opensearch-mcp-server"
version = "0.1.0"
description = "OpenSearch MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "opensearch-py>=2.8.0",
]

[project.scripts]
opensearch-mcp-server = "opensearch_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"